--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="com.google.android.gms.permission.AD_ID" tools:node="remove" />
 
     <application
-        android:label="ampedmedia_flutter"
+        android:label="android"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
