--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   expandable: ^5.0.1
   flutter_launcher_icons: ^0.13.1
   rename: ^3.0.2
+  dio: ^5.4.3+1
 
 dev_dependencies:
   flutter_test:
