--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   rename: ^3.0.2
   dio: ^5.4.3+1
+  flutter_inappwebview: ^6.0.0
 
 dev_dependencies:
   flutter_test:
